# JudgeCore

./: CMakeLists.txt  Compiler.cpp  Compiler.h  JudgeCore.cpp  JudgeCore.h  Judger.cpp  Judger.h  LICENSE  Parser.cpp  Parser.h  README.md  Runner.cpp  Runner.h  SyscallChecker.cpp  SyscallChecker.h  Utils.h  main.cpp
